--- a/fireworks-master/boby/index.html
+++ b/fireworks-master/boby/index.html
@@ -9,21 +9,13 @@
     <script src="js/jquery.js"></script>
     <script src="js/garden.js"></script>
     <script src="js/functions.js"></script>
-    <embed src="mp3/gbqq.mp3" hidden="true" autostart="true" loop="true">
+    <!-- <embed src="mp3/gbqq.mp3" hidden="true" autostart="true" loop="true"> -->
 
 </head>
 
 <body>
     <div id="mainDiv">
         <div id="content">
-            <div id="code">
-                <span class="comments">亲爱的宝贝：</span><br />
-                <span
-                    class="comments">在你生日到来之际，我将快乐的音符，作为礼物送给你，愿您拥有365个美丽的日子，衷心地祝福你，生日快乐！在此诚挚地献上我的三个祝愿：一愿你身体健康；二愿你幸福快乐；三愿你万事如意！</span><br /><br />
-                <span class="comments">送你一个生日蛋糕，祝你生日快乐！第一层，体贴！第二层，关怀！第三层，浪漫！第四层，温馨！中间夹层，甜蜜！祝你天天都有一份好心情！</span><br />
-                <br><br>
-                <span class="comments"><b class="bb">晓明 ★ boby</b></span>
-            </div>
             <div id="loveHeart">
                 <canvas id="garden"></canvas>
                 <div id="words">
@@ -35,11 +27,45 @@
                     </div>
                 </div>
             </div>
+            <div id="code">
+                <span class="comments">亲爱的宝贝：</span><br />
+                <span
+                    class="comments">在你生日到来之际，我将快乐的音符，作为礼物送给你，愿您拥有365个美丽的日子，衷心地祝福你，生日快乐！在此诚挚地献上我的三个祝愿：一愿你身体健康；二愿你幸福快乐；三愿你万事如意！</span><br /><br />
+                <span class="comments">送你一个生日蛋糕，祝你生日快乐！第一层，体贴！第二层，关怀！第三层，浪漫！第四层，温馨！中间夹层，甜蜜！祝你天天都有一份好心情！</span><br />
+                <br><br>
+                <span class="comments"><b class="bb">晓明 ★ boby</b></span>
+            </div>
         </div>
     </div>
     <script type="text/javascript">
+        let audioPlaying = true,
+            backgroundAudio, browser;
+        browser = navigator.userAgent.toLowerCase();
+        $('<audio class="audio1" src="mp3/gbqq.mp3" loop></audio>').prependTo('body');
+        if (!browser.indexOf('firefox') > -1) {
+            $('<embed id="background-audio" src="mp3/gbqq.mp3" autostart="1"></embed>').prependTo('body');
+            backgroundAudio = setInterval(function () {
+                $("#background-audio").remove();
+                $('<embed id="background-audio" src="mp3/gbqq.mp3"></embed>').prependTo('body');
+            }, 12000); // 120000 is the duration of your audio which in this case 2 mins.
+        }
+
+        $(".toggle-audio").on('click', function (event) {
+                audioPlaying = !audioPlaying;
+                $("#background-audio").remove();
+
+                clearInterval(backgroundAudio);
+                if (audioPlaying) {
+                    $(".audio1").play();
+                    // play audio 
+                }
+                else {
+                    $(".audio1").pause();
+                }
+            })
+
         var offsetX = $("#loveHeart").width() / 2;
-        var offsetY = $("#loveHeart").height() / 2 - 55;
+        var offsetY = $("#loveHeart").height() / 2;
         var together = new Date();
         together.setHours(8);
         together.setMinutes(0);
@@ -52,8 +78,6 @@
             msg.innerHTML = "您的浏览器已经过时!请使用非IE浏览器进行预览";
             document.body.appendChild(msg);
             $("#code").css("display", "none")
-            $("#copyright").css("position", "absolute");
-            $("#copyright").css("bottom", "10px");
             document.execCommand("stop");
         } else {
             setTimeout(function () {
@@ -72,7 +96,6 @@
     </div>
 
     </div>
-    <div style="display:none"></div>
 </body>
 
 </html>
